# mileyko-hello-bot

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/project/cfg/: __init__.py  decorator.py  exceptions.py
src/project/cfg/configs/: telebot.py
src/project/env/: __init__.py  env.py  exceptions.py  var.py
src/project/exceptions/: __init__.py  exceptions.py
