[project]
name = "Vexint"
version = "0.0.0"
description = "Secure communication between the pickup location owners and the workers"
authors = [
    { name = "Emelianov Artem", email = "yaz008.yaz008@yandex.ru" }
]
dependencies = [
    "pyTelegramBotAPI",
    "python-dotenv"
]
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "flake8-pyproject",
    "mypy",
    "pre-commit"
]

[tool.isort]
profile = "black"
py_version = "all"
skip_gitignore = true
line_length = 88
multi_line_output = 3
comment_prefix = 1
length_sort_sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
use_parentheses = true
lines_before_imports = 0
lines_after_imports = 2
combine_star = true
from_first = true
verbose = true
no_inline_sort = true
src_paths = ["src"]
remove_redundant_aliases = true
float_to_top = true
only_modified = true
star_first = true
include_trailing_comma = true

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
    /(
        .eggs|
        .git|
        .hg|
        .mypy_cache|
        .pytest_cache|
        __pycache__
    )/
'''
skip-string-normalization = true

[tool.flake8]
exclude = [
    ".venv",
    ".env",
    ".git",
    "__pycache__"
]
per-file-ignores = [
    "__init__.py:F401"
]
max-line-length = 88
max-complexity = 8
count = true

[tool.mypy]
python_version = "3.13"
platform = "win32"

disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true

warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_equality = true
strict = true

show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true

disable_error_code = [
    "import-untyped"
]
